# NovelRAG

./: .gitignore  LICENSE  READMD.md  README.md  pyproject.toml  requirements.txt
docs/: agent_system_design.md  multi_phase_orchestration.md  terminology.md
misc/llm_log_viewer/: README.md  index.html  sample_log.yaml  script.js  styles.css
novelrag/: __main__.py  action.py  aspect.py  config.py  exceptions.py  run.py  shell.py  template.py
novelrag/agent/: __init__.py  adapters.py  agent.py  channel.py  context.py  execution.py  goal.py  intent.py  llm_content_proposer.py  orchestrate.py  plan_strategy.py  planning.py  proposals.py  pursuit.py  pursuit_types.py  resource_tools.py  schedule.py  steps.py  strategy.py  tool.py  types.py  workspace.py
novelrag/agenturn/: __init__.py  agent.py  channel.py  goal.py  interaction.py  procedure.py  pursuit.py  step.py  tool.py  types.py
novelrag/aspect_editors/: __init__.py  typing.py
novelrag/backlog/: __init__.py  local.py  memory.py
novelrag/cli/: __init__.py  __main__.py  command.py  session.py  shell.py
novelrag/config/: handler.py  intent.py  llm.py  novel_rag.py  resource.py
novelrag/conversation/: __init__.py  history.py  item.py  summarizer.py
novelrag/core/: action.py  aspect.py  config.py  exceptions.py  operation.py  registry.py  shell.py  storage.py
novelrag/editors/: default_aspects.py  typing.py
novelrag/intent/: __init__.py  action.py  factory.py  intent.py  loader.py
novelrag/llm/: __init__.py  factory.py  logger.py  mixin.py  oai.py  types.py
novelrag/model/: __init__.py  outline.py  premise.py
novelrag/outline/: aspect.py
novelrag/pending_queue/: __init__.py  item.py  queue.py
novelrag/resource/: __init__.py  aspect.py  element.py  lut.py  operation.py  repository.py  vector.py
novelrag/resource_agent/: __init__.py  action_determine_loop.py  factory.py  llm_content_proposer.py  pipeline.py  procedure.py  proposals.py  undo.py  workspace.py
novelrag/session/: __init__.py  aspect.py  command.py  context.py  scope.py  session.py  undo.py
novelrag/tracer/: __init__.py  (+6 more)
test/: test_operation.py
tests/: test_agent.py  test_operation.py  test_procedure.py  test_resource.py  test_session.py  test_shell_e2e.py  test_tracer.py
(+215 files in other folders)
