[project]
name = "novelrag"
version = "0.1.0"
description = "A novel RAG system"
authors = [
    {name = "Qinkai Wu", email = "nice-die@live.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["novel", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "jinja2",
    "lancedb",
    "langchain-core>=0.3",
    "pydantic",
    "pyyaml",
    "pyaml-env",
]

[project.urls]
Repository = "https://github.com/ReaNAiveD/novelrag"
Documentation = "https://github.com/ReaNAiveD/NovelRAG#readme"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
openai = [
    "langchain-openai>=0.3",
]
azure-identity = [
    "azure-identity",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.18",
]
pg = [
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "pgvector>=0.3",
    "alembic>=1.14",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {include = ["novelrag*"], exclude = ["workspace*", "tests*"]}}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = """
    -ra -q
    --cov=novelrag
    --cov-report=term-missing
    --cov-branch
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
branch = true
source = ["novelrag"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
] 
